# beacon

./: README.md
server/: config.yaml  go.mod  go.sum  logging.toml  main.go
server/config/: config.go  constant.go  database.toml  jwt.go
server/controller/: auth_controller.go  user_controller.go  users.go
server/core/: constant.go  cutter.go  server.go  viper.go
server/dao/: user_dao.go
server/database/: database.go  db.go  db_interface.go
server/generate/: generate.go
server/generate/method/: User.go  jwt.go
server/global/: global.go  model.go
server/initialize/: db_list.go  ensure_tables.go  gorm.go  gorm_mssql.go  gorm_mysql.go  gorm_oracle.go  gorm_pgsql.go  gorm_sqlite.go  mongo.go  other.go  plugin.go  redis.go  register_init.go  router.go  timer.go  validator.go
server/initialize/internal/: gorm.go  logger.go
server/middleware/: jwt.go
server/model/: Appointment.go  Consumption.go  MedicalRecord.go  ServiceItem.go  case.go  caseinfo.go  cases.go  customer.go  customers.go  doctor.go  global.go  hospital.go  permission.go  permissions.go  role.go  roles.go  user.go  users.go
server/model/system/: jwt_black_list.go
server/router/: auth_router.go  role_router.go  user_router.go
server/router/v1/: auth_router.go  role_router.go  user_router.go
server/service/: user_service.go
server/service/system/: jwt_black_list.go  sys_initdb.go  sys_initdb_mssql.go  (+3 more)
server/utils/: clamis.go  config.go  directory.go  hash.go  hash_test.go  json copy.go  jwt.go  logger.go  validator_test.go
server_rs/: Cargo.toml
server_rs/src/: main.rs
(+11 files in other folders)
